Adding downloadable pdf link for my cv

--- a/about.html
+++ b/about.html
@@ -50,9 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="about.html">About me</a>
@@ -65,7 +63,11 @@
       </div>
     </nav>
 
-    <img src="images/heroImage.svg" alt="profile picture" class="heroImage d-flex justify-content-center mb-3">
+    <img
+      src="images/heroImage.svg"
+      alt="profile picture"
+      class="heroImage d-flex justify-content-center mb-3"
+    />
     <h1 class="mb-3">About me</h1>
     <h3>Front-end developer from Gothenburg, Sweden</h3>
     <div class="about-paragraphs">
@@ -89,7 +91,8 @@
         <br />
         <br />
         After exploring various career options, I decided to transition into
-        front-end development. I enrolled in a program with <a href="www.shecodes.io" class="shecodesLink">www.shecodes.io</a>,
+        front-end development. I enrolled in a program with
+        <a href="www.shecodes.io" class="shecodesLink">www.shecodes.io</a>,
         where I have gained valuable experience and knowledge that has helped me
         to grow as a developer.
         <br />
@@ -97,33 +100,37 @@
         Currently, I am focusing on completing my studies, seeking out new
         project ideas, and actively searching for my next opportunity to join a
         team and contribute my skills and experience as a front-end developer.
+        <br />
+        <br />
+        <a href="./CV-FarahAlhaddad.pdf" download="newfilename" target="_blank"
+          >Download My CV</a
+        >
       </p>
     </div>
 
-      <footer>
-            <div id="contact" class="contactMe d-flex justify-content-center mb-3">
-      <h2>📮 Contact me</h2>
+    <footer>
+      <div id="contact" class="contactMe d-flex justify-content-center mb-3">
+        <h2>📮 Contact me</h2>
       </div>
-        <div class="d-flex justify-content-center mb-3">
-          <a href="mailto:farah90.alhaddad@hotmail.com" class="email-link">
-            farah90.alhaddad@gmail.com
-          </a>
-        </div>
-        <div class="phone d-flex justify-content-center mb-3">
-          <p class="phone">+46 70 090 27 89</p>
-        </div>
-        <div class="social-links d-flex justify-content-center">
-          <a href="https://github.com/Farahalh" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/farah-alhaddad-a8204069/"
-            target="_blank"
-          >
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </div>
-      </footer>
-    </div>
+      <div class="d-flex justify-content-center mb-3">
+        <a href="mailto:farah90.alhaddad@hotmail.com" class="email-link">
+          farah90.alhaddad@gmail.com
+        </a>
+      </div>
+      <div class="phone d-flex justify-content-center mb-3">
+        <p class="phone">+46 70 090 27 89</p>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/Farahalh" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/farah-alhaddad-a8204069/"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
