Adding new projects and updating CSS, content and links.

--- a/about.html
+++ b/about.html
@@ -92,14 +92,14 @@
         <br />
         After exploring various career options, I decided to transition into
         front-end development. I enrolled in a program with
-        <a href="www.shecodes.io" class="shecodesLink">www.shecodes.io</a>,
+        <a href="https://www.shecodes.io/" target="_blank" class="shecodesLink">www.shecodes.io</a>,
         where I have gained valuable experience and knowledge that has helped me
         to grow as a developer.
         <br />
         <br />
-        Currently, I am focusing on completing my studies, seeking out new
-        project ideas, and actively searching for my next opportunity to join a
-        team and contribute my skills and experience as a front-end developer.
+        Currently, I am focusing on seeking out new project ideas, and actively
+        searching for my next opportunity to join a team to contribute my
+        skills and experience as a front-end developer.
         <br />
         <br />
         <a href="./CV-FarahAlhaddad.pdf" download="newfilename" target="_blank"
@@ -125,7 +125,7 @@
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.linkedin.com/in/farah-alhaddad-a8204069/"
+          href="https://www.linkedin.com/in/farahalh/"
           target="_blank"
         >
           <i class="fab fa-linkedin"></i>
