--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="heroRight">
           <h2>👋 Hi I am</h2>
           <h1>Farah Alhaddad</h1>
-          <h3>Front-end developer, based in Gothenburg, Sweden</h3>
+          <h3>Front-end developer based in Sweden</h3>
         </div>
         <div class="navigation-links mb-5">
           <a href="about.html#contact" class="contact-link" id="contact-link"
@@ -115,11 +115,10 @@
           <div class="contain-text">
             <h2 class="mb-3">Weather app</h2>
             <p class="projectText mb-3">
-              Weather Application. Coded with HTML, CSS, JavaScript.
-              <br />Linked to SheCodes Weather API.
+              Weather Application. Coded with HTML, CSS, React. API integration, SVG.
             </p>
             <a
-              href="https://dazzling-fox-d3f6a7.netlify.app/"
+              href="https://lovely-zabaione-d17f7a.netlify.app/"
               target="_blank"
               class="projectBtns btn btn-primary pt-3 pb-3 shadow"
               title="Weather App Link"
@@ -210,6 +209,31 @@
             >
           </div>
         </div>
+
+              <div class="row mt-3 mb-3">
+        <div class="col-sm-6">
+          <div class="contain-text">
+            <h2 class="mb-3">Dictionary app</h2>
+            <p class="projectText mb-3">
+              Dictionary Application. Coded with HTML, CSS, React. API integration.
+            </p>
+            <a
+              href="https://reliable-druid-7f559c.netlify.app/"
+              target="_blank"
+              class="projectBtns btn btn-primary pt-3 pb-3 shadow"
+              title="Dictionary App Link"
+              >Launch Application</a
+            >
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="images/dictionaryapp-img.svg"
+            alt="world clock app"
+            class="index-img img-fluid rounded border border-3"
+          />
+        </div>
+      </div>
       </div>
       </main>
 
@@ -230,7 +254,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/farah-alhaddad-a8204069/"
+            href="https://www.linkedin.com/in/farahalh/"
             target="_blank"
           >
             <i class="fab fa-linkedin"></i>
