--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="col-sm-6">
           <img
-            src="images/weatherimg.svg"
+            src="images/weatherApp.svg"
             alt="weather app"
             class="index-img img-fluid rounded border border-3"
           />
